--- a/test.ipynb
+++ b/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "1c226310",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "57adce0d",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "486afd64",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
+   "id": "97da0332",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logical X operator involves data qubits [ 0  5 10 15 20]\n",
+      "Logical Z operator involves data qubits [0 1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the logical operators\n",
+    "print(\"Logical X operator involves data qubits {}\".format(np.nonzero(code.Lx[0] == 1)[0]))\n",
+    "print(\"Logical Z operator involves data qubits {}\".format(np.nonzero(code.Lz[0] == 1)[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "b251c833",
    "metadata": {},
    "outputs": [
@@ -311,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "0b8247f4",
    "metadata": {},
    "outputs": [
@@ -463,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ddaf2f97",
    "metadata": {},
    "outputs": [
@@ -474,7 +495,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -482,14 +503,6 @@
    "source": [
     "assert False"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88d58ce4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
