--- a/experiments/compare_py_and_rust.ipynb
+++ b/experiments/compare_py_and_rust.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.7 μs ± 2.71 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "45.7 μs ± 689 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.6 ms ± 2.95 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "49.9 ms ± 831 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rust decoder time: 0.08660316467285156 seconds\n",
+      "Rust decoder time: 0.08996200561523438 seconds\n",
       "Number of nonconverged: 224\n",
       "Number of logical errors: 150\n"
      ]
@@ -145,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python decoder time: 71.07774996757507 seconds\n",
+      "Python decoder time: 71.17258882522583 seconds\n",
       "Number of nonconverged: 225\n",
       "Number of logical errors: 136\n"
      ]
