--- a/experiments/compare_py_and_rust.ipynb
+++ b/experiments/compare_py_and_rust.ipynb
@@ -11,7 +11,7 @@
     "import scipy.sparse as sp\n",
     "from qecdec import BPDecoder as BPDecoder_Rust\n",
     "from qecdec import BPDecoder_Py, RotatedSurfaceCode\n",
-    "from beliefmatching import detector_error_model_to_check_matrices\n",
+    "from qecdec import detector_error_model_to_check_matrices\n",
     "from time import time\n"
    ]
   },
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.6 μs ± 66.9 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "37.6 μs ± 183 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47.9 ms ± 179 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "48.6 ms ± 235 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rust decoder time: 0.06139183044433594 seconds\n",
+      "Rust decoder time: 0.05470085144042969 seconds\n",
       "Number of nonconverged: 224\n",
       "Number of logical errors: 150\n"
      ]
@@ -145,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python decoder time: 68.48541212081909 seconds\n",
+      "Python decoder time: 70.25258111953735 seconds\n",
       "Number of nonconverged: 225\n",
       "Number of logical errors: 136\n"
      ]
