--- a/notebooks/visualize_bp.ipynb
+++ b/notebooks/visualize_bp.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from qecdec.experiments import RotatedSurfaceCode_Memory\n",
-    "from qecdec.decoders import BPDecoder\n",
+    "from qecdec import RotatedSurfaceCode_Memory\n",
+    "from qecdec import BPDecoder\n",
     "from qecdec.utils import visualize_bp_decoding_process"
    ]
   },
