upload new files

--- a/interface_to_scala/notebook.ipynb
+++ b/interface_to_scala/notebook.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "from qecdec import RotatedSurfaceCode_Memory\n",
-    "from qecdec import BPDecoder\n",
+    "from qecdec import BPDecoder, DMemBPDecoder\n",
     "import numpy as np"
    ]
   },
@@ -33,11 +33,13 @@
     ")\n",
     "\n",
     "bp = BPDecoder(expmt.chkmat, expmt.prior, max_iter=max_iter)\n",
+    "dmembp = DMemBPDecoder(expmt.chkmat, expmt.prior, gamma=np.load(\"gamma.npy\"), max_iter=max_iter)\n",
     "\n",
     "syndromes, _ = expmt.circuit.compile_detector_sampler(seed=42).sample(num_shots, separate_observables=True)\n",
     "syndromes = syndromes.astype(np.uint8)\n",
     "\n",
-    "ehat_bp = bp.decode_batch(syndromes)"
+    "ehat_bp = bp.decode_batch(syndromes)\n",
+    "ehat_dmembp = dmembp.decode_batch(syndromes)"
    ]
   },
   {
@@ -51,7 +53,8 @@
     "np.save('chkmat.npy', expmt.chkmat)\n",
     "np.save('prior.npy', expmt.prior)\n",
     "np.save('syndromes.npy', syndromes)\n",
-    "np.save('ehat_bp.npy', ehat_bp)"
+    "np.save('ehat_bp.npy', ehat_bp)\n",
+    "np.save('ehat_dmembp.npy', ehat_dmembp)"
    ]
   },
   {
