--- a/pytorch/train_dmembp.ipynb
+++ b/pytorch/train_dmembp.ipynb
@@ -370,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b7a38b98",
    "metadata": {},
    "outputs": [],
    "source": [
     "gamma = model.gamma.detach().numpy().astype(np.float64)\n",
     "now = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
-    "np.save(f\"learned_params/gamma_{now}.npy\", gamma)"
+    "np.save(f\"learned_params/dmembp_gamma_{now}.npy\", gamma)"
    ]
   }
  ],
