--- a/pytorch/train_dmembp.ipynb
+++ b/pytorch/train_dmembp.ipynb
@@ -377,7 +377,7 @@
    "source": [
     "gamma = model.gamma.detach().numpy().astype(np.float64)\n",
     "now = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
-    "np.save(f\"learned_params/dmembp_gamma_{now}.npy\", gamma)"
+    "np.save(f\"learned_params/dmembp_{now}_gamma.npy\", gamma)"
    ]
   }
  ],
