--- a/pytorch/train_dmembp.ipynb
+++ b/pytorch/train_dmembp.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0376b39a",
+   "metadata": {},
+   "source": [
+    "# d=5"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33711a1c",
    "metadata": {},
    "outputs": [],
@@ -17,17 +25,24 @@
     "from train_utils import *\n",
     "from datetime import datetime\n",
     "\n",
-    "d = 5\n",
-    "rounds = 5\n",
-    "p = 0.01\n",
-    "num_bp_iters = 5\n",
-    "learning_rate = 0.002\n",
-    "loss_beta = 1.0"
+    "# Set experiment parameters.\n",
+    "d = 5  # code distance\n",
+    "rounds = 5  # number of rounds of stabilizer measurements\n",
+    "p = 0.01  # physical error rate\n",
+    "\n",
+    "# Set training parameters.\n",
+    "num_epochs = 20\n",
+    "batch_size = 256\n",
+    "model_kwargs = dict(num_iters=5)\n",
+    "optimizer_kwargs = dict(lr=0.002)\n",
+    "loss_fn_kwargs = dict(beta=1.0, skip_iters=0)\n",
+    "lr_scheduler_kwargs=dict(factor=0.2, patience=3, threshold=1e-3, threshold_mode=\"abs\")\n",
+    "early_stopper_kwargs = dict(patience=5, min_delta=1e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9094f6b2",
    "metadata": {},
    "outputs": [
@@ -64,6 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Sampling shots from the noisy circuit...\n",
+      "Added 8165 samples to the training dataset.\n",
+      "Added 815 samples to the validation dataset.\n",
+      "Generating all weight-1 errors...\n",
+      "Added 186 samples to the training dataset.\n",
+      "Generating all weight-2 errors...\n",
+      "Added 17205 samples to the training dataset.\n",
       "Size of train_dataset: 25556\n",
       "Size of val_dataset: 815\n"
      ]
@@ -75,14 +97,17 @@
     "    train_shots=10_000,\n",
     "    val_shots=1_000,\n",
     "    seed=42,\n",
+    "    train_all_wt1_errors=True,\n",
+    "    train_all_wt2_errors=True,\n",
+    "    remove_trivial_syndromes=True,\n",
     ")\n",
-    "print(\"Size of train_dataset:\", len(train_dataset))\n",
-    "print(\"Size of val_dataset:\", len(val_dataset))\n",
     "\n",
-    "model = LearnedDMemBP(expmt.chkmat, expmt.prior, num_iters=num_bp_iters)\n",
-    "loss_fn = DecodingLoss(expmt.chkmat, expmt.obsmat, beta=loss_beta)\n",
+    "model = LearnedDMemBP(expmt.chkmat, expmt.prior, **model_kwargs)\n",
+    "loss_fn = DecodingLoss(expmt.chkmat, expmt.obsmat, **loss_fn_kwargs)\n",
     "metric = DecodingMetric(expmt.chkmat, expmt.obsmat)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
+    "optimizer = torch.optim.Adam(model.parameters(), **optimizer_kwargs)\n",
+    "lr_scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, **lr_scheduler_kwargs)\n",
+    "early_stopper=EarlyStopper(**early_stopper_kwargs)"
    ]
   },
   {
@@ -102,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20: 100%|██████████| 100/100 [04:25<00:00,  2.66s/it, avg_loss=0.766982, grad_norm=0.249598]\n"
+      "Epoch 1/20: 100%|██████████| 100/100 [00:16<00:00,  6.04it/s, avg_loss=0.767078, grad_norm=0.303137]\n"
      ]
     },
     {
@@ -110,11 +135,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 1 Summary:\n",
-      "  Avg Train Loss: 0.766982\n",
-      "  Avg Val Loss: 0.829145\n",
-      "  wrong_syndrome_rate: 0.053988\n",
-      "  wrong_observable_rate: 0.011043\n",
-      "  failure_rate: 0.053988\n",
+      "  Avg Train Loss: 0.767078\n",
+      "  Avg Val Loss: 0.832159\n",
+      "  wrong_syndrome_rate: 0.050307\n",
+      "  wrong_observable_rate: 0.007362\n",
+      "  failure_rate: 0.050307\n",
       "  Learning Rate: 0.002000\n",
       "\n"
      ]
@@ -123,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2/20: 100%|██████████| 100/100 [04:25<00:00,  2.65s/it, avg_loss=0.703902, grad_norm=0.124192]\n"
+      "Epoch 2/20: 100%|██████████| 100/100 [00:16<00:00,  6.11it/s, avg_loss=0.704019, grad_norm=0.272567]\n"
      ]
     },
     {
@@ -131,11 +156,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 2 Summary:\n",
-      "  Avg Train Loss: 0.703902\n",
-      "  Avg Val Loss: 0.783050\n",
-      "  wrong_syndrome_rate: 0.051534\n",
+      "  Avg Train Loss: 0.704019\n",
+      "  Avg Val Loss: 0.784984\n",
+      "  wrong_syndrome_rate: 0.050307\n",
       "  wrong_observable_rate: 0.011043\n",
-      "  failure_rate: 0.051534\n",
+      "  failure_rate: 0.050307\n",
       "  Learning Rate: 0.002000\n",
       "\n"
      ]
@@ -144,7 +169,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3/20: 100%|██████████| 100/100 [04:25<00:00,  2.65s/it, avg_loss=0.677188, grad_norm=0.119595]\n"
+      "Epoch 3/20: 100%|██████████| 100/100 [00:16<00:00,  6.06it/s, avg_loss=0.677190, grad_norm=0.196400]\n"
      ]
     },
     {
@@ -152,8 +177,8 @@
      "output_type": "stream",
      "text": [
       "Epoch 3 Summary:\n",
-      "  Avg Train Loss: 0.677188\n",
-      "  Avg Val Loss: 0.763699\n",
+      "  Avg Train Loss: 0.677190\n",
+      "  Avg Val Loss: 0.765155\n",
       "  wrong_syndrome_rate: 0.045399\n",
       "  wrong_observable_rate: 0.012270\n",
       "  failure_rate: 0.045399\n",
@@ -165,7 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4/20: 100%|██████████| 100/100 [04:22<00:00,  2.63s/it, avg_loss=0.663185, grad_norm=0.155058]\n"
+      "Epoch 4/20: 100%|██████████| 100/100 [00:16<00:00,  6.04it/s, avg_loss=0.662672, grad_norm=0.128141]\n"
      ]
     },
     {
@@ -173,11 +198,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 4 Summary:\n",
-      "  Avg Train Loss: 0.663185\n",
-      "  Avg Val Loss: 0.754795\n",
-      "  wrong_syndrome_rate: 0.045399\n",
-      "  wrong_observable_rate: 0.012270\n",
-      "  failure_rate: 0.045399\n",
+      "  Avg Train Loss: 0.662672\n",
+      "  Avg Val Loss: 0.756020\n",
+      "  wrong_syndrome_rate: 0.041718\n",
+      "  wrong_observable_rate: 0.013497\n",
+      "  failure_rate: 0.042945\n",
       "  Learning Rate: 0.002000\n",
       "\n"
      ]
@@ -186,7 +211,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 5/20: 100%|██████████| 100/100 [04:24<00:00,  2.65s/it, avg_loss=0.653930, grad_norm=0.152184]\n"
+      "Epoch 5/20: 100%|██████████| 100/100 [00:16<00:00,  6.17it/s, avg_loss=0.653461, grad_norm=0.132810]\n"
      ]
     },
     {
@@ -194,11 +219,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 5 Summary:\n",
-      "  Avg Train Loss: 0.653930\n",
-      "  Avg Val Loss: 0.751365\n",
-      "  wrong_syndrome_rate: 0.044172\n",
-      "  wrong_observable_rate: 0.012270\n",
-      "  failure_rate: 0.044172\n",
+      "  Avg Train Loss: 0.653461\n",
+      "  Avg Val Loss: 0.752269\n",
+      "  wrong_syndrome_rate: 0.039264\n",
+      "  wrong_observable_rate: 0.013497\n",
+      "  failure_rate: 0.040491\n",
       "  Learning Rate: 0.002000\n",
       "\n"
      ]
@@ -207,7 +232,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 6/20: 100%|██████████| 100/100 [04:25<00:00,  2.65s/it, avg_loss=0.647820, grad_norm=0.146551]\n"
+      "Epoch 6/20: 100%|██████████| 100/100 [00:16<00:00,  6.17it/s, avg_loss=0.647153, grad_norm=0.157165]\n"
      ]
     },
     {
@@ -215,29 +240,8 @@
      "output_type": "stream",
      "text": [
       "Epoch 6 Summary:\n",
-      "  Avg Train Loss: 0.647820\n",
-      "  Avg Val Loss: 0.750128\n",
-      "  wrong_syndrome_rate: 0.038037\n",
-      "  wrong_observable_rate: 0.013497\n",
-      "  failure_rate: 0.039264\n",
-      "  Learning Rate: 0.002000\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7/20: 100%|██████████| 100/100 [04:27<00:00,  2.67s/it, avg_loss=0.642901, grad_norm=0.133063]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7 Summary:\n",
-      "  Avg Train Loss: 0.642901\n",
-      "  Avg Val Loss: 0.750312\n",
+      "  Avg Train Loss: 0.647153\n",
+      "  Avg Val Loss: 0.750873\n",
       "  wrong_syndrome_rate: 0.035583\n",
       "  wrong_observable_rate: 0.013497\n",
       "  failure_rate: 0.036810\n",
@@ -249,7 +253,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 8/20: 100%|██████████| 100/100 [04:25<00:00,  2.66s/it, avg_loss=0.639216, grad_norm=0.121764]\n"
+      "Epoch 7/20: 100%|██████████| 100/100 [00:16<00:00,  6.07it/s, avg_loss=0.642682, grad_norm=0.124679]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7 Summary:\n",
+      "  Avg Train Loss: 0.642682\n",
+      "  Avg Val Loss: 0.751024\n",
+      "  wrong_syndrome_rate: 0.036810\n",
+      "  wrong_observable_rate: 0.013497\n",
+      "  failure_rate: 0.038037\n",
+      "  Learning Rate: 0.002000\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/20: 100%|██████████| 100/100 [00:16<00:00,  6.16it/s, avg_loss=0.639662, grad_norm=0.150676]\n"
      ]
     },
     {
@@ -257,11 +282,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 8 Summary:\n",
-      "  Avg Train Loss: 0.639216\n",
-      "  Avg Val Loss: 0.751466\n",
-      "  wrong_syndrome_rate: 0.034356\n",
+      "  Avg Train Loss: 0.639662\n",
+      "  Avg Val Loss: 0.750999\n",
+      "  wrong_syndrome_rate: 0.038037\n",
       "  wrong_observable_rate: 0.013497\n",
-      "  failure_rate: 0.035583\n",
+      "  failure_rate: 0.039264\n",
       "  Learning Rate: 0.002000\n",
       "\n"
      ]
@@ -270,7 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9/20: 100%|██████████| 100/100 [04:24<00:00,  2.65s/it, avg_loss=0.636516, grad_norm=0.084022]\n"
+      "Epoch 9/20: 100%|██████████| 100/100 [00:16<00:00,  6.04it/s, avg_loss=0.637262, grad_norm=0.145191]\n"
      ]
     },
     {
@@ -278,11 +303,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 9 Summary:\n",
-      "  Avg Train Loss: 0.636516\n",
-      "  Avg Val Loss: 0.752080\n",
-      "  wrong_syndrome_rate: 0.031902\n",
-      "  wrong_observable_rate: 0.013497\n",
-      "  failure_rate: 0.033129\n",
+      "  Avg Train Loss: 0.637262\n",
+      "  Avg Val Loss: 0.751149\n",
+      "  wrong_syndrome_rate: 0.036810\n",
+      "  wrong_observable_rate: 0.014724\n",
+      "  failure_rate: 0.038037\n",
       "  Learning Rate: 0.002000\n",
       "\n"
      ]
@@ -291,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 10/20: 100%|██████████| 100/100 [04:24<00:00,  2.65s/it, avg_loss=0.634569, grad_norm=0.113857]\n"
+      "Epoch 10/20: 100%|██████████| 100/100 [00:16<00:00,  6.11it/s, avg_loss=0.635644, grad_norm=0.136541]\n"
      ]
     },
     {
@@ -299,11 +324,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 10 Summary:\n",
-      "  Avg Train Loss: 0.634569\n",
-      "  Avg Val Loss: 0.751789\n",
-      "  wrong_syndrome_rate: 0.033129\n",
+      "  Avg Train Loss: 0.635644\n",
+      "  Avg Val Loss: 0.750919\n",
+      "  wrong_syndrome_rate: 0.035583\n",
       "  wrong_observable_rate: 0.012270\n",
-      "  failure_rate: 0.034356\n",
+      "  failure_rate: 0.036810\n",
       "  Learning Rate: 0.000400\n",
       "\n"
      ]
@@ -312,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 11/20: 100%|██████████| 100/100 [04:23<00:00,  2.64s/it, avg_loss=0.632954, grad_norm=0.103478]\n"
+      "Epoch 11/20: 100%|██████████| 100/100 [00:16<00:00,  6.04it/s, avg_loss=0.633803, grad_norm=0.062244]\n"
      ]
     },
     {
@@ -320,11 +345,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 11 Summary:\n",
-      "  Avg Train Loss: 0.632954\n",
-      "  Avg Val Loss: 0.751791\n",
-      "  wrong_syndrome_rate: 0.033129\n",
+      "  Avg Train Loss: 0.633803\n",
+      "  Avg Val Loss: 0.750666\n",
+      "  wrong_syndrome_rate: 0.034356\n",
       "  wrong_observable_rate: 0.012270\n",
-      "  failure_rate: 0.034356\n",
+      "  failure_rate: 0.035583\n",
       "  Learning Rate: 0.000400\n",
       "\n"
      ]
@@ -333,7 +358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 12/20: 100%|██████████| 100/100 [04:24<00:00,  2.64s/it, avg_loss=0.632980, grad_norm=0.163386]\n"
+      "Epoch 12/20: 100%|██████████| 100/100 [00:16<00:00,  5.91it/s, avg_loss=0.633886, grad_norm=0.158321]\n"
      ]
     },
     {
@@ -341,11 +366,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 12 Summary:\n",
-      "  Avg Train Loss: 0.632980\n",
-      "  Avg Val Loss: 0.751724\n",
-      "  wrong_syndrome_rate: 0.033129\n",
+      "  Avg Train Loss: 0.633886\n",
+      "  Avg Val Loss: 0.750557\n",
+      "  wrong_syndrome_rate: 0.034356\n",
       "  wrong_observable_rate: 0.012270\n",
-      "  failure_rate: 0.034356\n",
+      "  failure_rate: 0.035583\n",
       "  Learning Rate: 0.000400\n",
       "\n",
       "Early stopping triggered\n"
@@ -353,18 +378,18 @@
     }
    ],
    "source": [
-    "train_gamma(\n",
+    "train_decoder(\n",
     "    model,\n",
     "    train_dataset,\n",
     "    val_dataset,\n",
     "    loss_fn,\n",
     "    metric,\n",
     "    optimizer,\n",
-    "    num_epochs=20,\n",
-    "    batch_size=256,\n",
+    "    num_epochs=num_epochs,\n",
+    "    batch_size=batch_size,\n",
     "    device=\"cpu\",\n",
-    "    scheduler_kwargs=dict(factor=0.2, patience=3, threshold=1e-3, threshold_mode=\"abs\"),\n",
-    "    early_stopper=EarlyStopper(patience=5, min_delta=1e-3),\n",
+    "    lr_scheduler=lr_scheduler,\n",
+    "    early_stopper=early_stopper,\n",
     ")"
    ]
   },
@@ -375,10 +400,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gamma = model.gamma.detach().numpy().astype(np.float64)\n",
-    "now = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
-    "np.save(f\"learned_params/dmembp_{now}_gamma.npy\", gamma)"
+    "gamma = torch.stack([x.detach() for x in model.gamma]).cpu().numpy().astype(np.float64)\n",
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
+    "np.save(f\"learned_params/dmembp_d{d}_{timestamp}_gamma.npy\", gamma)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fda5aef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
